Fix body background in dark mode

--- a/Flashcards/Client/Styles/style.scss
+++ b/Flashcards/Client/Styles/style.scss
@@ -35,6 +35,11 @@ html {
     font-family: 'Noto Sans JP', sans-serif;
 }
 
+body {
+    background-color: $color-white;
+    color: $color-black;
+}
+
 button {
     font-family: 'Noto Sans JP', sans-serif;
 }
